# Build_Barrage

./: .gitignore  Barrfile  CMakeLists.txt  README.md  barr_gc_dump.txt  pounce.build
.cache/clangd/index/: atl_arena.c.B14268B60AFD3DC6.idx  atl_arena.h.7482C90F616A52DD.idx  atl_cmd_build.c.E27292961D85D0A3.idx  atl_cmd_build.h.96E15D5EBBB83CDD.idx  atl_cmd_clean.c.8F05AF7C58530BCA.idx  atl_cmd_clean.h.7EF8358B9C9814C7.idx  atl_cmd_config_linux.c.1DBEAA80ED9E5A8A.idx  atl_cmd_config_linux.h.ED250F298C2C467E.idx  atl_cmd_help.c.1E4523DEA81ECBA1.idx  atl_cmd_help.h.361CAF673E901FDE.idx  atl_cmd_init.c.859015D2DAC60548.idx  atl_cmd_init.h.3C1BAD2929589540.idx  atl_cmd_new.c.5C1D4838C0AFEAE3.idx  atl_cmd_new.h.AD42B34E0C421B33.idx  atl_cmd_new_create_project.c.61987C8CAB3A8778.idx  atl_cmd_new_create_project.h.656E9A03B83D89B3.idx  atl_cmd_rebuild.c.4D271FDEEF08F933.idx  atl_cmd_rebuild.h.66F9BB62B3F38847.idx  atl_cmd_status.c.5611C00C520DFBE9.idx  atl_cmd_status.h.11CC1BE771983D17.idx  atl_cmd_test.c.194B8342DE96624C.idx  atl_cmd_test.h.D4D6C6452FEEC880.idx  atl_cmd_version.c.D2D0FF0B96455A19.idx  atl_cmd_version.h.0E9FBBD67509EFAA.idx  atl_commands.c.B4A8A4643C5A515F.idx  atl_commands.h.81C946BA0AE9476B.idx  atl_compile.c.ECFCCFA83E4581FC.idx  atl_compile.h.E84CED45355BEAD9.idx  atl_cpu.c.3C80851FDC3E6383.idx  atl_cpu.h.4ED81DC5D3CBD9B4.idx  atl_create_project.c.BEE2FC97E6B684D5.idx  atl_create_project.h.80766E46693B5573.idx  atl_debug.c.D89D1822FCB73605.idx  atl_debug.h.C667FE0E05A90134.idx  atl_defs.h.0F4B336981C080F8.idx  atl_depgen.c.64B71D51678DFEC6.idx  atl_depgen.h.3ABFDA5A5740DDF6.idx  atl_env.c.9C0A296E3C7019E7.idx  atl_env.h.1727B284B44096D4.idx  atl_glob_config_keys.h.52B23E9CD6BAB3FB.idx  (+90 more)
.notes/: notes.vsix
.pounce/data/: CMakeLists.txt.bk  executable_path.pounce
.pounce/data/.src_bk/: barr_arena.h  barr_cleanup.h  barr_commands.h  barr_debug.c  barr_debug.h  barr_defs.h  barr_env.h  barr_glob_config_parser.c  barr_io.c  barr_io.h  barr_os_layer.h  barr_utils.h  main.c
.pounce/data/.src_bk/barr_build_system/: barr_build_ctx.c  barr_build_ctx.h  barr_hashmap.c  barr_sha256.h  barr_src_list.c  barr_src_list.h  barr_src_scan.c
.pounce/data/.src_bk/barr_commands/: barr_cmd_build.c  barr_cmd_build.h  barr_cmd_config_linux.c  barr_cmd_init.c  barr_cmd_new.h  barr_cmd_new_create_project.c  barr_cmd_new_create_project.h  barr_cmd_rebuild.c  barr_cmd_rebuild.h  barr_cmd_status.c  barr_cmd_status.h  barr_cmd_test.c  barr_cmd_test.h  barr_cmd_version.c  barr_cmd_version.h
.pounce/data/.src_bk/barr_platform/linux/: barr_run_process.c
.pounce/data/.src_bk/crux/: crx.c  crx.h  crx_ast.c
.pounce/trash/: pounce.build-172996152
docs/: ATL_Lua_API.md  Barrfile_Syntax.md  CHANGELOG.md  OLMOS.md  technical.md
examples/: Bootstrap  Default_Barrfile  Lua5.4.7_Barrfile  Minimal  Recommended  clang
install/: barr-install
modes/war/src/: main.c
scripts/: atl_build  atl_rel_build  barr_build  barr_install  barr_rel_build  build.sh  install
src/: atl_arena.c  atl_arena.h  atl_cleanup.h  atl_cmd_help.c  atl_cmd_version.c  atl_commands.h  atl_cpu.c  atl_cpu.h  atl_create_project.c  atl_create_project.h  atl_debug.c  atl_debug.h  atl_defs.h  atl_env.c  atl_env.h  atl_glob_config_keys.h  atl_glob_config_parser.c  atl_glob_config_parser.h  atl_io.c  atl_io.h  atl_lua_rt.h  atl_os_layer.h  atl_utils.c  atl_utils.h  barr_arena.c  barr_arena.h  barr_commands.h  barr_config.h  barr_cpu.c  barr_cpu.h  barr_debug.c  barr_debug.h  barr_defs.h  barr_env.c  barr_env.h  barr_gc.c  barr_gc.h  barr_glob_config_keys.h  barr_glob_config_parser.c  barr_glob_config_parser.h  (+15 more)
src/atl_build_system/: atl_compile.c  atl_compile.h  atl_depgen.c  atl_depgen.h  atl_hashmap.c  atl_hashmap.h  atl_project.c  atl_project.h  atl_sha256.c  atl_sha256.h  atl_src_list.c  atl_src_list.h  atl_src_scan.c  atl_src_scan.h
src/atl_commands/: atl_cmd_build.c  atl_cmd_build.h  atl_cmd_config_linux.c  atl_cmd_config_linux.h  atl_cmd_help.c  atl_cmd_help.h  atl_cmd_init.c  atl_cmd_init.h  atl_cmd_new.c  atl_cmd_new.h  atl_cmd_new_create_project.c  atl_cmd_status.c  atl_cmd_status.h  atl_cmd_test.c  atl_cmd_test.h  atl_cmd_version.c  atl_cmd_version.h
src/atl_lua_rt/: atl_l_env.c  atl_l_init.c  atl_l_os.c  atl_l_project_create.c  atl_l_source_files.c
src/atl_platform/linux/: atl_run_process.c
src/barr_build_system/: barr_batch_build.c  barr_batch_build.h  barr_build_ctx.c  barr_build_ctx.h  barr_compile.c  barr_compile.h  barr_hashmap.c  barr_hashmap.h  barr_linker.c  barr_linker.h  barr_modules.c  barr_modules.h  barr_package_scan_dir.c  barr_package_scan_dir.h  barr_sha256.c  barr_src_list.c  barr_src_list.h  barr_src_scan.c  barr_src_scan.h  barr_xxhash.c  barr_xxhash.h
src/barr_commands/: barr_cmd_build.c  barr_cmd_build.h  barr_cmd_clean.c  barr_cmd_clean.h  barr_cmd_config_linux.c  barr_cmd_config_linux.h  barr_cmd_debug.c  barr_cmd_debug.h  barr_cmd_fo.c  barr_cmd_fo.h  barr_cmd_init.c  barr_cmd_init.h  barr_cmd_install.c  barr_cmd_install.h  barr_cmd_mode.c  barr_cmd_mode.h  barr_cmd_new.c  barr_cmd_new_create_project.c  barr_cmd_play.c  barr_cmd_play.h  barr_cmd_rebuild.c  barr_cmd_recovery.c  barr_cmd_recovery.h  barr_cmd_run.c  barr_cmd_run.h  barr_cmd_status.c  barr_cmd_test.c  barr_cmd_tool.c  barr_cmd_tool.h  barr_cmd_uninstall.c  barr_cmd_uninstall.h  barr_cmd_version.c  barr_cmd_version.h
src/barr_platform/linux/: barr_cpu.c  barr_cpu.h  barr_find_package.c  barr_find_package.h  barr_run_process.c  barr_thread_jobs.c  barr_thread_jobs.h  barr_thread_pool.c  barr_thread_pool.h
src/crux/: crx.c  crx.h  crx_ast.c  crx_ast.h
src/olmos/: olmos.c  olmos.h  olmos_ast.c  olmos_ast.h  olmos_variables.h
test_atl/: atl_build.lua
test_atl/src/: main.c
tools/fo/: Barrfile
tools/fo/.barr/cache/: build.cache
tools/fo/.barr/data/: Barrfile.stamp  build_info  source_files_log
tools/fo/src/: core.c  core.h  main.c  util.c  util.h
tools/linux/detect_features/.barr/cache/: build.cache
tools/linux/detect_features/.barr/data/: Barrfile.stamp  (+2 more)
tools/linux/detect_features/src/: main.c
